# MagicSquare_1

./: .cursorrules  .gitignore  README.md  defect_list.md  pyproject.toml
Prompting/: 01. MagicSquare_ProblemRecognition_Report.md  01.problem-definition-prompt.md  02. MagicSquare_Full_Conversation_Transcript.md  02.design-prompt-cursor.md  02.design-prompt.md  03. MagicSquare_CursorRules_UserEntity_Transcript.md  04. MagicSquare_CursorRules_Full_Conversation_Transcript.md  05. Refrigerator_AgentPrompts_Transcript.md  06. MagicSquare_Level1-5_UserJourney_UserStories_Scenarios_Transcript.md  07. MagicSquare_PRD_Transcript.md  08. MagicSquare_PRD_Review_Transcript.md  09. MagicSquare_TDD_ToDoList_Transcript.md  10. MagicSquare_README_StartGuide_Transcript.md  11. MagicSquare_TDD_Start_Export_Transcript.md  12. MagicSquare_AC_FR_01_01_RED_QA_Transcript.md  13. MagicSquare_FR01_FR05_DualTrack_RED_Design_Transcript.md  14. MagicSquare_FR01_FR05_RED_Skeleton_Transcript.md  15. MagicSquare_AC_FR_01_01_GREEN_Slice_Transcript.md  16. MagicSquare_RED_GREEN_TodoList_README_Update_Transcript.md  17. MagicSquare_G01_G07_GREEN_PhaseWrap_Transcript.md  18. MagicSquare_PyQt_GUI_Screen_Transcript.md  19. MagicSquare_Golden_Master_Regression_Transcript.md  20. MagicSquare_REFACTOR_Planning_ECB_Analysis_Transcript.md  21. MagicSquare_REFACTOR_RF01_ValidationResult_Transcript.md  22. MagicSquare_TDD_QA_Coverage_Analysis_Transcript.md
Report/: 01. MagicSquare_ProblemRecognition_Report.md  01.problem-definition.md  02. MagicSquare_Architecture_Contracts_Report.md  02.design.md  (+19 more)
(+88 files in other folders)
