[project]
name = "magicsquare"
version = "0.1.0"
description = "4x4 Magic Square — Dual-Track TDD / ECB"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
]

[project.scripts]
magicsquare-gui = "src.boundary.screen.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
